--- a/src/index.pug
+++ b/src/index.pug
@@ -1,4 +1,4 @@
-include assets/components/header/header
+include assets/pages/main/main
 
 doctype html
 html
@@ -13,5 +13,4 @@ html
     title Plant Shop
 
   body
-    +header
-    p.text body lala
+    +main
