--- a/src/assets/components/header/header.scss
+++ b/src/assets/components/header/header.scss
@@ -1,4 +1,64 @@
-.text {
-  color: red;
-  font-size: 30px;
+@import '../../scss/vars';
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+}
+
+.header-inner {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+  font-family: $font-header;
+  align-items: center;
+}
+
+.logo {
+  position: relative;
+  z-index: 1;
+}
+
+.logo-text {
+  font-size: 12px;
+  font-weight: 900;
+  line-height: 16px;
+  color: #fff;
+
+  position: absolute;
+  top: 10px;
+  left: 13px;
+  z-index: 1;
+}
+
+.nav {
+  display: flex;
+}
+
+.nav-icon {
+  margin-top: 8px;
+  margin-right: 40px;
+
+  &:last-of-type {
+    margin-right: 3px;
+  }
+}
+
+.sign-btn {
+  font-family: inherit;
+  padding: 8px 31px;
+  color: $color-primary;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 20px;
+  border: none;
+  background-color: #fff;
+  margin-bottom: 7px;
+
+  &.sign-in {
+    background-color: $color-primary;
+    color: #FFFFFF
+  }
 }
