--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,7 +1,48 @@
-@import '../components/header/header';
+@import './vars';
 
-* {
-  box-sizing: border-box;
-  background-color: #eee;
-  margin-top: 10px;
+@import '../pages/main/main';
+@import '../components/header/header';
+@import '../components/footer/footer';
+@import '../sections/home/home';
+@import '../sections/benefits/benefits';
+@import '../sections/plants/plants';
+@import '../sections/help-relax/help-relax';
+@import '../sections/shop-banner/shop-banner';
+
+body {
+  font-family: $font-primary;
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.page-container {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+.container {
+  width: 100%;
+  max-width: 1196px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.row {
+  display: flex;
+}
+
+.col {
+  display: flex;
+  width: 50%;
+
+  &.flex-column {
+    flex-direction: column;
+  }
+
+  &.justify-content-between {
+    justify-content: space-between;
+  }
+
 }
