--- a/src/assets/sections/plants/plants.pug
+++ b/src/assets/sections/plants/plants.pug
@@ -20,7 +20,7 @@ mixin plants
               +svg-image('arrow-down')
         .carousel-content
           each plant in plants
-            .carusel-plant
+            .carousel-plant
               img.plant-photo(src= plant.photo)
               h4.plant-title= plant.title
               span.plant-price= plant.price
