--- a/src/assets/sections/plants/plants.scss
+++ b/src/assets/sections/plants/plants.scss
@@ -14,6 +14,7 @@
     font-size: 20px;
     line-height: 24px;
     color: #000;
+    margin-top: 4px;
   }
 
   .carousel-filter {
@@ -40,7 +41,7 @@
   }
 
   .carousel-plant {
-    width: 19%;
+    width: 18.65%;
   }
 
   .plant-photo {
@@ -52,7 +53,7 @@
     font-weight: 400;
     line-height: 20px;
     color: #000;
-    margin: 16px 0 8px;
+    margin: 18px 0 5px;
   }
 
   .plant-price {
