--- a/src/index.pug
+++ b/src/index.pug
@@ -9,8 +9,8 @@ html
     link(rel='stylesheet', href="css/reset.css")
     link(rel="stylesheet", href="css/style.css")
     link(href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Nunito:wght@500;900&family=Poppins:wght@500&family=Raleway:wght@500&family=Work+Sans:wght@400;500&display=swap" rel="stylesheet")
-
     title Plant Shop
 
   body
     +main
+    script(src='js/main.js')
