Main Page - layout fixes

--- a/src/assets/components/header/header.pug
+++ b/src/assets/components/header/header.pug
@@ -1,6 +1,6 @@
 mixin header
   .header
-    .container
+    .page-container
       .header-inner
         .logo
           include ../../../../dist/svg/logo.svg
