--- a/src/assets/components/header/header.scss
+++ b/src/assets/components/header/header.scss
@@ -19,6 +19,7 @@
 .logo {
   position: relative;
   z-index: 1;
+  padding-left: 50px;
 }
 
 .logo-text {
@@ -29,7 +30,7 @@
 
   position: absolute;
   top: 10px;
-  left: 13px;
+  left: 63px;
   z-index: 1;
 }
 
