--- a/src/assets/components/footer/footer.scss
+++ b/src/assets/components/footer/footer.scss
@@ -4,7 +4,7 @@
   border-top: 2px solid rgba(21, 105, 99, 0.3);
 
   .footer-inner {
-    padding: 58px 109px 70px;
+    padding: 58px 0 70px;
     display: flex;
     justify-content: space-between;
   }
@@ -96,11 +96,11 @@
   .footer-btn {
     font-family: $font-footer-btn;
     font-weight: 500;
-    font-size: 8px;
+    font-size: 11px;
     line-height: 14px;
     color: #fff;
 
-    padding: 4px 12px;
+    padding: 7px 28px;
     background-color: $color-primary;
     border: none;
   }
