--- a/src/assets/sections/help-relax/help-relax.scss
+++ b/src/assets/sections/help-relax/help-relax.scss
@@ -19,25 +19,21 @@
   }
 
   .title {
-    width: 520px;
     font-weight: 700;
     font-size: 40px;
     line-height: 56px;
     color: $color-secondary;
     margin: 10px 0 16px;
-    padding-left: 21px;
   }
 
   .image {
-    margin: auto 0 10px;
+    margin: auto 0 0;
   }
 
   .text {
-    width: 520px;
     font-size: 16px;
     line-height: 28px;
     color: $color-secondary;
-    padding-left: 21px;
   }
 
 }
