--- a/src/assets/sections/home/home.scss
+++ b/src/assets/sections/home/home.scss
@@ -16,14 +16,18 @@
 }
 
 .slider-item {
-  display: none;
+  display: block;
+  opacity: 0;
+  transition: all .3s linear;
+  position: relative;
   & img {
     width: 608px;
+    height: 100%;
+    position: absolute;
   }
 
   &.active {
-    //transform: translateX(0);
-    display: block;
+    opacity: 1;
   }
 }
 
