--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -53,10 +53,14 @@
   border: none;
   background-color: #fff;
   margin-bottom: 7px;
+  transition: opacity 0.2s linear;
 }
 .sign-btn.sign-in {
   background-color: #156963;
   color: #FFFFFF;
+}
+.sign-btn:hover {
+  opacity: 0.9;
 }
 
 .footer {
@@ -147,6 +151,10 @@
   padding: 7px 28px;
   background-color: #156963;
   border: none;
+  transition: opacity 0.2s linear;
+}
+.footer .footer-btn:hover {
+  opacity: 0.9;
 }
 
 .home {
@@ -349,9 +357,30 @@
   display: flex;
   justify-content: space-between;
   text-align: center;
+  flex-wrap: wrap;
 }
 .plants .carousel-plant {
   width: 18.65%;
+  padding-bottom: 20px;
+  border: 1px solid transparent;
+  transition: border 0.1s linear;
+  margin-bottom: 20px;
+}
+.plants .carousel-plant:hover {
+  border-color: #f5f5f5;
+  cursor: pointer;
+}
+.plants .carousel-plant:hover .plant-photo {
+  transform: scale(1.1);
+}
+.plants .carousel-plant:hover .plant-title {
+  text-decoration: underline;
+}
+.plants .plant-photo-container {
+  overflow: hidden;
+}
+.plants .plant-photo {
+  transition: transform 0.5s ease;
 }
 .plants .plant-title {
   font-size: 16px;
@@ -426,6 +455,10 @@
   font-size: 14px;
   line-height: 20px;
   border: none;
+  transition: opacity 0.2s linear;
+}
+.shop-banner .banner-btn:hover {
+  opacity: 0.9;
 }
 .shop-banner .right-col {
   width: 38%;
