--- a/src/assets/sections/plants/plants.pug
+++ b/src/assets/sections/plants/plants.pug
@@ -7,6 +7,11 @@ include ../../mixins/svg-image/svg-image
     { photo: '/images/kecubung.png', title: 'Kecubung Plants', price: 'IDR 85.000' },
     { photo: '/images/kecubung-2.png', title: 'Kecubung Plants', price: 'IDR 85.000' },
     { photo: '/images/kecubung-3.png', title: 'Kecubung Plants', price: 'IDR 85.000' },
+    { photo: '/images/kaktus.png', title: 'Kaktus Plants', price: 'IDR 85.000' },
+    { photo: '/images/landak.png', title: 'Landak Plants', price: 'IDR 105.000' },
+    { photo: '/images/kecubung.png', title: 'Kecubung Plants', price: 'IDR 85.000' },
+    { photo: '/images/kecubung-2.png', title: 'Kecubung Plants', price: 'IDR 85.000' },
+    { photo: '/images/kecubung-3.png', title: 'Kecubung Plants', price: 'IDR 85.000' },
   ]
 
 mixin plants
@@ -21,6 +26,7 @@ mixin plants
         .carousel-content
           each plant in plants
             .carousel-plant
-              img.plant-photo(src= plant.photo)
+              .plant-photo-container
+                img.plant-photo(src= plant.photo)
               h4.plant-title= plant.title
               span.plant-price= plant.price
